15.0.2 support. Removes old vendored gems in favor of chef_gem. Adds build_essential to run list. Update README.